--- a/Timed_Fly/bin/plugin.yml
+++ b/Timed_Fly/bin/plugin.yml
@@ -1,9 +1,9 @@
 main: com.minestom.TimedFly
 name: TimedFly
-version: 1.2
+version: 1.5.2
 author: By_Jack
 depend: [Vault]
-softdepend: [ActionBarAPI]
+softdepend: [ActionBarAPI, PlaceholderAPI]
 commands:
   fly:
     usage: /<command>
