--- a/Timed_Fly/src/plugin.yml
+++ b/Timed_Fly/src/plugin.yml
@@ -1,9 +1,9 @@
 main: com.minestom.TimedFly
 name: TimedFly
-version: 2.2.1
+version: 2.3.0
 author: By_Jack
 depend: [Vault]
-softdepend: [PlaceholderAPI, TokenManager]
+softdepend: [PlaceholderAPI, TokenManager, ASkyBlock]
 commands:
   timedfly:
     aliases: [tf, timedf]
