--- a/Timed_Fly/src/config.yml
+++ b/Timed_Fly/src/config.yml
@@ -36,7 +36,11 @@ Gui:
   # Rows of the inventory (must be multiple of 9, ex: 9, 18... etc)
   Slots: 9
 
-# Att: This is still on beta
+# If true the players time will be saved with the player leaves the server
+# Do not use if you are running the plugin with multiple servers liked via MySQL
+StopTimerOnLeave: true
+
+# Att: This is still on beta (currently not working)
 # If true a bossbar will appear when a player buys time (only servers v1.9 and above)
 BossBarTimer:
   Enable: false
@@ -89,7 +93,6 @@ Announcer:
   - '1'
   - '0'
 
-
 # If true it will execute a command when flight disables
 OnFlyDisableCommands:
   Enabled: false
@@ -107,6 +110,9 @@ World-List:
   Worlds:
   - 'world'
   - 'survival'
+
+# If the server is running aSkyBlock and this is true players flight will be disabled when exiting the island
+ASkyblockIntegration: true
 
 # The name says it...
 Check-For-Updates: true
