--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,28 @@
             <version>2.10.3</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- To install this use:
+            mvn install:install-file \
+              -Dfile=./dependencies/<Jar File> \
+              -DgroupId=<group-id> \
+              -DartifactId=<artifact-id> \
+              -Dversion=<version> \
+              -Dpackaging=jat \
+              -DgeneratePom=true
+         -->
+        <dependency>
+            <groupId>dependency.jars</groupId>
+            <artifactId>TokenManager</artifactId>
+            <version>3.2.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>dependency.jars</groupId>
+            <artifactId>PlayerPoints</artifactId>
+            <version>2.1.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
