--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,11 +5,6 @@
 #                                              #
 ################################################
 
-# Modes are 'core' or 'complete'.
-  # Core will only enable the timer. So, no store
-  # Complete will enable everything... store, cooldowns, refunds, etc.
-Mode: 'complete'
-
 # Enable this so your players can refund their flight time if they bought it by accident.
 Refunds:
   Enable: true
@@ -19,30 +14,42 @@ Refunds:
   RefundsPerDay: 2
 
 Database:
-  # Type: sqlite for flatfile or mysql for an external database.
+  # Type: sqlite for flatfile, and mysql or mongodb for an external database.
   Type: 'sqlite'
   # Only edit if 'mysql' is set in Type
   MySQL:
     # name of your database
     Database: 'timedfly'
-    # ip of you MySQL database
+    # ip of your MySQL database
     Host: 'localhost'
-    # port of you MySQL database, commonly is 3306
+    # port of your MySQL database, commonly is 3306
     Port: 3306
-    # username of you MySQL database
+    # username of your MySQL database
     Username: 'user'
-    # password of you MySQL database
+    # password of your MySQL database
+    Password: 'root'
+  # Only edit if 'mongodb' is set in Type
+  MongoBD:
+    # name of your database
+    Database: 'timedfly'
+    # ip of your MongoDB database
+    Host: 'localhost'
+    # port of your MongoDB database, commonly is 27017
+    Port: 27017
+    # username of your MongoDB database
+    Username: 'user'
+    # password of your MongoDB database
     Password: 'root'
 
 OpenMenu:
-  # If set to true players will need a permission to use the command /fly
+  # If set to true players will need a permission to use the command /fly (or the specified command)
   UsePermission:
     Enable: false
     Permission: 'timedfly.flygui'
-    # Custom command to open the Timed Fly menu.
-    Commands:
-      - 'fly'
-      - 'flymenu'
+  # Custom command to open the Timed Fly menu.
+  Commands:
+    - 'fly'
+    - 'flymenu'
 
 Gui:
   Enable: true
@@ -69,7 +76,7 @@ StopTimerOn:
   # Do not use if you are running the plugin with multiple servers liked via MySQL
   BlackListedWorld: false
 
-# If true players with "timedfly.fly.onoff" will toggle flight mode if a command from OpenMenuCommand is used.
+# If true players with "timedfly.fly.skipstore" will toggle flight mode if a command from OpenMenuCommand is used.
 ToogleFlight: false
 
 # Set to true if you want to get a message in the console saying who bought flight time.
@@ -94,24 +101,11 @@ Sounds:
   FlightDisabled: ENTITY_WITHER_DEATH
 
 # You can enable multiple currency types (Not recommended)
-CurrencyType:
-  # If true the currency used will be from Levels, balance placeholder: [tokens]
-  UseTokenManager: false
-
-  # If true the currency used will be from PlayerPoints, balance placeholder: [points]
-  UsePlayerPoints: false
-
-  # If true the currency used will be from Vault, balance placeholder: [balance]
-  UseVault: true
-
-  # If true players will be charged from their exp levels, balance placeholder: [levels]
-  UseLevelsCurrency: false
-
-  # If true players will be charged from their experience points, balance placeholder: [exp]
-  UseExpCurrency: false
+# Available currencies are: none, vault, tokenmanager, playerpoints, levels, exp
+DefaultCurrency: vault
 
 # This is the limit amount of time a player can add to his fly time (in minutes)
-# bypass this with timedfly.limit.bypass.
+# bypass this with timedfly.bypass.limit
 LimitMaxTime: 30
 
 # Display some messages on Title/Actionbar.
@@ -132,14 +126,6 @@ Messages:
       - '2'
       - '1'
       - '0'
-
-
-# If true it will execute a command when flight disables
-OnFlyDisableCommands:
-  Enable: false
-  Commands:
-    - '[console] say %player% is using hacks D:'
-    - '[player] say i''m using hacks >:D'
 
 # A list of world in which you want the plugin to be Enable.
 World-List:
