--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ${project.name}
 version: ${project.version}
-main: me.jackscode.timedfly5.TimedFly
+main: me.jackscode.timedfly.TimedFly
 api-version: 1.13
 authors: [By_Jack]
 description: Get Fly for a limited amount of time, but wait... you gotta pay first.
