Add: Copy compiled jar to test server

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <description>Get Fly for a limited amount of time, but wait... you gotta pay first.</description>
     <properties>
+        <server.path>/SomeServer/plugins/</server.path>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -41,6 +42,29 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-to-server</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target name="Copy the target jar to the test minecraft server">
+                                <copy todir="${server.path}">
+                                    <fileset dir="${project.build.directory}">
+                                        <include name="**/TimedFly*.jar"/>
+                                    </fileset>
+                                </copy>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
