Add: Commands to toggle modules & Fixed on reload issue

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: me.jackscode.timedfly.TimedFly
 api-version: 1.13
 authors: [By_Jack]
 description: Get Fly for a limited amount of time, but wait... you gotta pay first.
+commands:
+  timedfly:
+    aliases: tf
