Add: Implemented command handler

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
