--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <description>Get Fly for a limited amount of time, but wait... you gotta pay first.</description>
     <properties>
-        <server.path>/SomeServer/plugins/</server.path>
+        <server.path>C:\Users\tferm\Downloads\mc server\plugins</server.path>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -57,7 +57,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
-                <configuration>
+                <configuration> 
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
@@ -93,7 +93,7 @@
                             <target name="Copy the target jar to the test minecraft server">
                                 <copy todir="${server.path}">
                                     <fileset dir="${project.build.directory}">
-                                        <include name="**/TimedFly*.jar"/>
+                                        <include name="**/${name}-${version}.jar"/>
                                     </fileset>
                                 </copy>
                             </target>
